--- a/raytrace.html
+++ b/raytrace.html
@@ -98,13 +98,18 @@
 		{
 			return x.y;
 		}
-
+		
 		// sphere
 		float dSphere( vec3 x, vec3 c, float r )
 		{
 			return length( x-c ) - r;
 		}
-
+		
+		// Daelyn: cube
+		float dCube(vec3 p, vec3 c, float a) {
+			vec3 d = abs(p - c) - a;
+			return min(max(d.x, max(d.y, d.z)), 0.0) + length(max(d, 0.0));
+		}
 		// -------------------------------------------------------------------------
 
 		struct Dist
@@ -145,11 +150,12 @@
 			hit = closer( hit, 5, dSphere(p, vec3(-1.5,0.5,0), 0.5) ); // Daelyn: Fourth sphere
 			hit = closer( hit, 6, dSphere(p, vec3(-2.5,0.5,0), 0.5) ); // Daelyn: Fifth sphere
 
+			hit = closer( hit, 7, dCube(p, vec3(2.5,0.5,0), 0.5) ); // Daelyn: Cube -->
 			// more objects here ...
 
 			return hit;
 		}
-
+		// Daelyn: Distance function for a cube
 
 		// use dScene and finite differences to estimate the normal of the object
 		// at position x
@@ -267,6 +273,21 @@
 				{
 					// thist sphere shall be green
 					Cd = vec3( 0.0, 1.0, 0.0 );
+				}
+				else if( hit.index == 5 )
+				{
+					// Daelyn: this sphere shall be a turquoise
+					Cd = vec3( .251, .8784, .8157 );
+				}
+				else if( hit.index == 6 )
+				{
+					// Daelyn: this sphere shall be neon pink
+					Cd = vec3( 1.0, .0784, .5765 );
+				}
+				else if( hit.index == 7 )
+				{
+					// Daelyn: Cube shall be purple
+					Cd = vec3( .749, .251, .749 );
 				}
 
 				// add light to overall color
