--- a/raytrace.html
+++ b/raytrace.html
@@ -91,37 +91,40 @@
 			vec3 specularColor;
 			float shininess;
 			float reflection; // Daelyn: Reflectivity coefficient, ranges from 0 (no reflection) to 1 (full mirror)
+			float refraction; // Daelyn: Index of refraction for the material
 		};
 		
 		
 		// Daelyn: Defining materials
-		Material materials[8]; // Assuming 7 objects + 1 for general setup
+		Material materials[9]; // Assuming 7 objects + 1 for general setup
 
 		void setupMaterials() {
 			// Daelyn: General material setup
-			materials[0] = Material(vec3(0.1), vec3(0.2), vec3(0.5), 25.0, 0.0); // Daelyn: Default for objects without specific material
+			materials[0] = Material(vec3(0.1), vec3(0.2), vec3(0.5), 25.0, 0.0, 0.0); // Daelyn: Default for objects without specific material
 			
 			// Daelyn: Plane - somewhat metallic gray
-			materials[1] = Material(vec3(0.05, 0.05, 0.05), vec3(0.5, 0.5, 0.5), vec3(0.7, 0.7, 0.7), 10.0, 0.0);
+			materials[1] = Material(vec3(0.05, 0.05, 0.05), vec3(0.5, 0.5, 0.5), vec3(0.7, 0.7, 0.7), 10.0, 0.0, 0.0);
 			
 			// Daelyn: First sphere - metallic red
-			materials[2] = Material(vec3(0.1, 0, 0), vec3(1.0, 0.0, 0.0), vec3(0.5, 0.2, 0.2), 30.0, 0.0);
+			materials[2] = Material(vec3(0.1, 0, 0), vec3(1.0, 0.0, 0.0), vec3(0.5, 0.2, 0.2), 30.0, 0.0, 0.0);
 			
 			// Daelyn: Second sphere - metallic blue with reflection
-			materials[3] = Material(vec3(0, 0, 0.1), vec3(0.0, 0.0, 1.0), vec3(0.2, 0.2, 0.5), 30.0, 0.8);
+			materials[3] = Material(vec3(0, 0, 0.1), vec3(0.0, 0.0, 1.0), vec3(0.2, 0.2, 0.5), 30.0, 0.8, 0.0);
 			
 			// Daelyn: Third sphere - metallic green
-			materials[4] = Material(vec3(0, 0.1, 0), vec3(0.0, 1.0, 0.0), vec3(0.2, 0.5, 0.2), 30.0, 0.0);
+			materials[4] = Material(vec3(0, 0.1, 0), vec3(0.0, 1.0, 0.0), vec3(0.2, 0.5, 0.2), 30.0, 0.0, 0.0);
 			
 			// Daelyn: Fourth sphere - metallic turquoise
-			materials[5] = Material(vec3(0.251, 0.8784, 0.8157) * 0.1, vec3(0.251, 0.8784, 0.8157), vec3(0.251, 0.8784, 0.8157) * 0.5, 25.0, 0.0);
+			materials[5] = Material(vec3(0.251, 0.8784, 0.8157) * 0.1, vec3(0.251, 0.8784, 0.8157), vec3(0.251, 0.8784, 0.8157) * 0.5, 25.0, 0.0, 0.0);
 			
 			// Daelyn: Fifth sphere - metallic neon pink
-			materials[6] = Material(vec3(1.0, 0.0784, 0.5765) * 0.1, vec3(1.0, 0.0784, 0.5765), vec3(1.0, 0.0784, 0.5765) * 0.5, 25.0, 0.0);
+			materials[6] = Material(vec3(1.0, 0.0784, 0.5765) * 0.1, vec3(1.0, 0.0784, 0.5765), vec3(1.0, 0.0784, 0.5765) * 0.5, 25.0, 0.0, 0.0);
 			
 			// Daelyn: Cube - metallic purple
-			materials[7] = Material(vec3(0.749, 0.251, 0.749) * 0.1, vec3(0.749, 0.251, 0.749), vec3(0.749, 0.251, 0.749) * 0.5, 30.0, 0.0);
+			materials[7] = Material(vec3(0.749, 0.251, 0.749) * 0.1, vec3(0.749, 0.251, 0.749), vec3(0.749, 0.251, 0.749) * 0.5, 30.0, 0.0, 0.0);
 
+			// Daelyn: Glass sphere for refraction
+			materials[8] = Material(vec3(0.1, 0.1, 0.1), vec3(0.8, 0.8, 0.8), vec3(1.0, 1.0, 1.0), 50.0, 0.0, 1.5); // Daelyn: High shininess, refraction index of glass
 			
 		}
 
@@ -191,12 +194,14 @@
 			Dist hit = Dist( -1, INFINITY );
 
 			hit = closer( hit, 1, dPlane(p) );
-			hit = closer( hit, 2, dSphere(p, vec3(-0.5,0.5,0), 0.5) );
-			hit = closer( hit, 3, dSphere(p, vec3(0.5,0.5,0), 0.5) ); // Daelyn: Second sphere
-			hit = closer( hit, 4, dSphere(p, vec3(1.5,0.5,0), 0.5) ); // Daelyn: Third sphere
-			hit = closer( hit, 5, dSphere(p, vec3(-1.5,0.5,0), 0.5) ); // Daelyn: Fourth sphere
-			hit = closer( hit, 6, dSphere(p, vec3(-2.5,0.5,0), 0.5) ); // Daelyn: Fifth sphere
-			hit = closer( hit, 7, dCube(p, vec3(2.5,0.5,0), 0.5) ); // Daelyn: Cube
+			hit = closer( hit, 2, dSphere(p, vec3(-0.5,0.5,4), 0.5) );
+			hit = closer( hit, 3, dSphere(p, vec3(0.5,0.5,4), 0.5) ); // Daelyn: Second sphere
+			hit = closer( hit, 4, dSphere(p, vec3(1.5,0.5,4), 0.5) ); // Daelyn: Third sphere
+			hit = closer( hit, 5, dSphere(p, vec3(-1.5,0.5,4), 0.5) ); // Daelyn: Fourth sphere
+			hit = closer( hit, 6, dSphere(p, vec3(-2.5,0.5,4), 0.5) ); // Daelyn: Fifth sphere
+			hit = closer( hit, 7, dCube(p, vec3(2.5,0.5,4), 0.5) ); // Daelyn: Cube
+			hit = closer( hit, 8, dSphere(p, vec3(-0.5,2.0,4), 0.5) ); // Daelyn: glass sphere directly above the red one
+			hit = closer( hit, 2, dSphere(p, vec3(0.0,3.2,4), 0.5) ); // Daelyn: cube to demonstrate refraction better
 			// more objects here ...
 
 			return hit;
@@ -237,7 +242,7 @@
 		// Daelyn: returns index -1 if no hit is discovered
 		// Daelyn: recursive raymarching to account for reflections
 		Dist raymarch(Ray r) {
-			const int maxDepth = 1000; // Max recursion depth for reflections, change this as needed for performance
+			const int maxDepth = 1000; // Daelyn: Max recursion depth for reflections, change this as needed for performance
 			float totalDistance = 0.0;
 		
 			for (int depth = 0; depth < maxDepth; depth++) {
@@ -262,22 +267,24 @@
 						r.d = reflect(r.d, n);
 					} else if (result.index == 7 && materials[7].reflection > 0.0) {
 						r.d = reflect(r.d, n);
+					} else if (result.index == 8 && materials[8].reflection > 0.0) {
+						r.d = reflect(r.d, n);
 					} else {
-						// If not reflective, or reflections are not to be processed further, finalize raymarch
+						// Daelyn: If not reflective, or reflections are not to be processed further, finalize raymarch
 						totalDistance += result.distance;
-						result.distance = totalDistance; // Update the total distance to the hit
+						result.distance = totalDistance; // Daelyn: Update the total distance to the hit
 						return result;
 					}
 					
 					r.o = pos + r.d * uSettings.epsilon;
-					totalDistance += result.distance; // Increment total distance by the distance to hit
+					totalDistance += result.distance; // Daelyn: Increment total distance by the distance to hit
 					continue; // Continue with the next iteration for the reflected ray
 				}
 				
-				totalDistance += result.distance; // Increment total distance traveled by the ray
+				totalDistance += result.distance; // Daelyn: Increment total distance traveled by the ray
 			}
 		
-			return Dist(-1, INFINITY); // Return no intersection if max depth exceeded without a hit
+			return Dist(-1, INFINITY); // Daelyn: Return no intersection if max depth exceeded without a hit
 		}
 		
 		
@@ -335,20 +342,43 @@
 			return 0.0; // Daelyn: Not in shadow
 		}
 
+		// Daelyn: Refraction computation
+		vec3 refractRay(vec3 I, vec3 N, float eta) {
+			float cosi = -max(-1.0, min(1.0, dot(I, N)));
+			float etai = 1.0, etat = eta;
+			
+			vec3 norm = N;
+			if (cosi < 0.0) { 
+				// Daelyn: The ray is inside the object, we need to swap the indices and invert the normal
+				cosi = -cosi;
+				etai = eta;
+				etat = 1.0;
+				norm = -N;
+			}
+			float etaRatio = etai / etat;
+			float k = 1.0 - etaRatio * etaRatio * (1.0 - cosi * cosi);
+			if (k < 0.0) {
+				// Daelyn: Total internal reflection
+				return vec3(0.0);
+			} else {
+				return normalize(etaRatio * I + (etaRatio * cosi - sqrt(k)) * norm);
+			}
+		}
+		
 		// Daelyn: main raytracing loop, automatically called for each viewport pixel
 		void main(void) {
-			setupMaterials(); // Initialize materials
+			setupMaterials(); // Daelyn: Initialize materials
 			Ray r = getRayForCurrentPixel();
 			vec3 viewDir = normalize(-r.d);
 			vec3 finalColor = vec3(0,0,0);
-			Dist hit = raymarch(r); // Initial depth is 0
+			Dist hit = raymarch(r); // Daelyn: Initial depth is 0
 		
 			if (hit.index != -1) {
 				vec3 pos = r.o + r.d * hit.distance;
 				vec3 nrm = nScene(pos);
 				Material mat;
 		
-				// Explicitly handle each case
+				// Daelyn: Explicitly handle each case
 				if (hit.index == 1) {
 					mat = materials[1];
 				} else if (hit.index == 2) {
@@ -363,28 +393,29 @@
 					mat = materials[6];
 				} else if (hit.index == 7) {
 					mat = materials[7];
-				} else {
-					mat = materials[0]; // Default material
+				} else if (hit.index == 8) {
+					mat = materials[8];
+				}else {
+					mat = materials[0]; // Daelyn: Default material
 				}
 		
-				// Light setup
+				// Daelyn: Light setup
 				Light sun = Light(vec3(10, 10, 10), vec3(1, 1, 1), 0.1, 0.9, 0.5);
 		
-				// Compute shadow status
+				// Daelyn: Compute shadow status
 				float inShadow = shadow(pos, sun.position);
 				vec3 lightEffect = calculatePhongLighting(pos, nrm, viewDir, sun, mat);
 		
-				// Apply shadow effect
+				// Daelyn: Apply shadow effect
 				if (inShadow > 0.0) {
-					finalColor = vec3(0); // Darkened due to shadow
+					finalColor = vec3(0); // Daelyn: Darkened due to shadow
 				} else {
-					finalColor = lightEffect; // Fully lit by the light source
+					finalColor = lightEffect; // Daelyn: Fully lit by the light source
 				}
 			}
 		
 			gl_FragColor = vec4(finalColor, 1.0);
 		}
-		
 		
 		
 
