Updated Readme and adjusted documentation

--- a/raytrace.html
+++ b/raytrace.html
@@ -2,8 +2,8 @@
 <html>
   <head>
 	<!-- Name: Daelyn Doughty -->
-	<!-- Assignment: 4 -->
-	<!-- Due date: 3/27/2024 -->
+	<!-- Assignment: 4-2 -->
+	<!-- Due date: 4/20/2024 -->
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <script type="text/javascript" charset="utf-8" src="./renderer.js"></script>
     <script type="text/javascript" charset="utf-8" src="lib/controls.js"></script>
